--- a/form-validation/index.html
+++ b/form-validation/index.html
@@ -57,7 +57,7 @@
           class="col-10 m-2"
           placeholder="enter your email"
         />
-        <small></small>
+     <small id="email-small"></small>
         <div class="radio m-2">
           <strong class="d-block">Gender</strong>
           <label for="gender"
